--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* { 
+/* * { 
     background-color: #191919;
     padding: 0;
     margin: 0;
@@ -94,9 +94,199 @@ button a, .connect-btn {
     text-decoration: none;
     max-width: 45px;
     height: 45px;
-    display: inline-block;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     color: #f9004d;
     margin: 22px 10px;
+}
+
+@media screen and (max-width: 480px){
+    .about img {
+        max-width: 75%;
+    }
+    .main {
+        flex-direction: column;
+    }
+    .about-text {
+        width: auto;
+    }
+    .about-text p {
+        font-size: 14px;
+    }
+    .about-text h2 {
+        font-size: 26px;
+    }
+    .about-text h5 {
+        font-size: 18px;
+    }
+} */
+
+* { 
+    background-color: #191919;
+    padding: 0;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+}
+
+.about {
+    width: 100%;
+    height: 100vh;
+    background-color: #191919;
+    display: flex;
+    justify-content: center;;
+    align-items: center;
+}
+
+.about .main img{
+    height: auto ; 
+    width: 600px;
+    max-width: 40%;
+    border-radius: 5% 60% 40% 50%;
+    padding: 5px 1px;
+}
+
+.about .main img:hover{
+    transform: scale(1.05);
+    transition: .4s;
+}
+
+.about-text {
+    width: 550px;
+    max-width: 100%;
+    padding: 0 10px;
+}
+
+.main {
+    width: 1280px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-text h2 {
+    color: white;
+    font-size: 3vw;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-text h5 {
+    color: white;
+    font-size: 1.5vw;
+    text-transform: capitalize;
+    margin-bottom: 25px;
+    letter-spacing: 2px;
+}
+
+span {
+    color: #f9004d;
+}
+
+.about-text p {
+    color: #00c9f9;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 1vw;
+    margin-bottom: 45px;
+}
+
+button {
+    max-width: 100%;
+    background-color: #f9004d;
+    border: 2px solid transparent;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 30px;
+}
+
+button:hover {
+    text-decoration: none;
+    color: #f9004d;
+    background: transparent;
+    border: 2px solid;
+    transition: .4s;
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+button a, .connect-btn {
+    text-decoration: none;
+    color: white;
+    background: transparent;
+}
+
+.social-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social {
+    align-items: center;
+}
+
+.social a{
+    text-decoration: none;
+    max-width: 45px;
+    max-height: 45px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #f9004d;
+    margin: 22px 15px;
+}
+
+@media screen and (max-width: 1180px) {
+    .about {
+        width: 100%;
+        height: auto;
+        padding: 70px 0px;
+    }
+    .about .main img {
+        margin-bottom: 35px;
+    }
+    .about-text {
+        width: auto;
+    }
+    .about-text p {
+        font-size: 14px;
+    }
+    .about-text h2 {
+        font-size: 26px;
+        margin-bottom: 20px;
+    }
+    .about-text h5 {
+        font-size: 18px;
+    }
+    .main {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .about .main img {
+        margin-bottom: 35px;
+    }
+    .about-text {
+        width: auto;
+    }
+    .about-text p {
+        font-size: 14px;
+    }
+    .about-text h2 {
+        font-size: 26px;
+        margin-bottom: 20px;
+    }
+    .about-text h5 {
+        font-size: 18px;
+    }
+    .main {
+        flex-direction: column;
+    }
 }
